--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@aws-sdk/client-bedrock-runtime": "^3.981.0",
     "@google/genai": "^1.30.0",
     "@google/generative-ai": "^0.21.0",
+    "@types/express-rate-limit": "^5.1.3",
     "axios": "^1.13.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "docx": "^8.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^8.2.1",
     "framer-motion": "^12.23.25",
     "helmet": "^7.1.0",
     "html2canvas": "^1.4.1",
